--- a/resume.html
+++ b/resume.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: page
 title: Resume
 ---
 <div class="row">
-  <div class="col-md-2">
-  	<ul class="nav nav-pills">
+  <div class="column-small">
+  	<ul>
         {% for section in site.data.sections %}
             <p><a href="#{{ section.id }}" class="to-{{ section.id }}">
                     {{ section.name }}
@@ -13,13 +13,13 @@ title: Resume
     </ul>
   </div>
 
-  <div class="col-md-8">
+  <div class="column">
   	    {% for section in site.data.sections %}
-        <div class="section">
-            <h2 id="{{ section.id }}">
+        <div class="section" id="{{ section.id }}">
+            <h3>
                 {{ section.name }}
-            </h2>
-            <hr />
+            </h3>
+            <hr/>
             {% capture section_layout %}resume/{{section.layout}}.html{% endcapture %}
             {% for hash in site.data %}
               {% if hash[0] == section.id %}
@@ -31,4 +31,3 @@ title: Resume
     {% endfor %}
   </div>
 </div>
-    
