--- a/resume.html
+++ b/resume.html
@@ -3,17 +3,7 @@ layout: page
 title: Resume
 ---
 <div class="row">
-  <div class="column-small">
-  	<ul>
-        {% for section in site.data.sections %}
-            <p><a href="#{{ section.id }}" class="to-{{ section.id }}">
-                    {{ section.name }}
-            </a></p>
-        {% endfor %}
-    </ul>
-  </div>
-
-  <div class="column">
+  <div class="">
   	    {% for section in site.data.sections %}
         <div class="section" id="{{ section.id }}">
             <h3>
